2015-05-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-make-encrypt-recipient-header): Handle
	multiple same name fields.

2015-05-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Fix for CCL unusable environments.
	* mime-edit.el (mime-edit-normalize-eol-crlf): Define for only CCL
	usable environment.
	(mime-edit-sign-pgp-mime): Use elisp routine for CCL unusable
	environments.

2015-02-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-make-encrypt-recipient-header): Returns
	cons of recipients list and header string.  Pick recipients more
	strictly.
	(mime-edit-encrypt-pgp-mime, mime-edit-encrypt-smime): Adjusted.

2014-11-09  Erik Hetzner <egh@e6h.org>

	* semi-pkg.el: New file.

2014-11-09  Erik Hetzner <egh@e6h.org>

	* mime-ui-en.texi: Fix headers and missing cross-references.

	* mime-ui-ja.texi: Likewise.

	* mime-ui-en.sgml: Removed.

	* mime-ui-ja.sgml: Removed.

2014-10-26  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-verify-application/*-signature): Set
	epa-info-buffer's buffer to the current buffer when the buffer is
	displyed.
	(mime-decrypt-application/pgp-encrypted): Remove unused code.

2014-10-25  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-add-application/pgp-keys): Prompt before
	import.  Show result.

	* mime-edit.el (mime-edit-insert-key): Really insert keys.

2014-09-13  Erik Hetzner  <egh@e6h.org>

	* mime-play.el (mime-activate-mailcap-method): Bind
	process-connection-type to nil while starting external process.
	Cf. https://github.com/wanderlust/semi/pull/5

2014-09-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-pgp-decrypt-string)
	(mime-verify-application/*-signature-internal): Bind
	inhibit-eol-conversion to nil while eol conversion.

2014-09-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-parse): Require mime-parse.el.

2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-translate-single-part-tag): Fix the last
	change.
