@@ -1,3 +1,11 @@
+2015-05-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-edit.el (mime-edit-make-encrypt-recipient-header): Car of
+	return vale is now expanded list of mail addresses and key-id.
+	Enclose mail addresses with '<' and '>'.
+	Cf. https://github.com/wanderlust/semi/issues/9
+	(mime-edit-encrypt-pgp-mime): Adjusted.
+
 2015-05-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-edit.el (mime-edit-make-encrypt-recipient-header): Handle
